kubernetes/homeassistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  serviceName: homeassistant
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      # serviceAccountName: homeassistant
      containers:
        - name: homeassistant
          image: homeassistant
          imagePullPolicy: IfNotPresent
          ports:
            - name: homeassistant
              containerPort: 8123
            - name: homekit
              containerPort: 21063
          volumeMounts:
            - mountPath: /config
              name: homeassistant-config
            - mountPath: /media
              name: homeassistant-media
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 15
            httpGet:
              path: /
              port: homeassistant
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              smarter-devices/zigbee: 1
        - name: hass-configurator
          image: hass-configurator
          imagePullPolicy: IfNotPresent
          ports:
            - name: configurator
              containerPort: 3218
          volumeMounts:
            - mountPath: /hass-config
              name: homeassistant-config
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 15
            tcpSocket:
              port: configurator
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 32Mi
              cpu: 100m
        # - name: k8s-homekit-cam
        #   image: ghcr.io/gdrapp/k8s-homekit-cam:k8s-homekit-cam
        #   imagePullPolicy: Always
        #   args: ["--monitor", "/hass-config/home-assistant.log"]
        #   volumeMounts:
        #     - mountPath: /hass-config
        #       name: homeassistant-config
        #       readOnly: true
      priorityClassName: high
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-config-nfs
        - name: homeassistant-media
          persistentVolumeClaim:
            claimName: homeassistant-media
