kubernetes/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - port: 8123
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homekit
  annotations:
    metallb.universe.tf/allow-shared-ip: homekit
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.37
  selector:
    app: homeassistant
  ports:
    - port: 21063
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homekit-front-door-camera
  annotations:
    metallb.universe.tf/allow-shared-ip: homekit
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.37
  selector:
    app: homeassistant
  ports:
    - port: 21068
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: hass-configurator
spec:
  selector:
    app: homeassistant
  ports:
    - port: 3218
