kubernetes/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        # - homeassistant.gregrapp.net
        - homeassistant-config.gregrapp.net
      secretName: homeassistant-tls
  rules:
    # - host: homeassistant.gregrapp.net
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: homeassistant
    #             port:
    #               number: 8123
    - host: homeassistant-config.gregrapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass-configurator
                port:
                  number: 3218
